= Changelog

== v2023.1.0 (unreleased)

=== Dependency update

- [backenđ] Upgrade to Apache Batik 1.16.0 (from 1.14.0)
- [backend] Switch to https://github.com/spring-projects/spring-boot/releases/tag/v2.7.5[Spring Boot 2.7.5]

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/1431[#1431] The default implementation of the Property View should not try to handle a multi valuated EStructuralFeature of type String

== v2022.11.0

=== Architectural decision records

- [ADR-069] Add support for children layout strategy
- [ADR-070] How to contribute a new diagram node style
- [ADR-071] Add parametric SVG node style
- [ADR-072] Add support for the edition of routing points
- [ADR-073] Add support for intermodel references (inside the same project)
- [ADR-074] Add support for edge reconnection
 
=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1300[#1300] [core] Rename SiriusWebJSONResourceFactoryImpl to JSONResourceFactoryImpl
- https://github.com/eclipse-sirius/sirius-components/issues/1301[#1301] [core] Add support for having intermodel references. Now, the URI of resources added in a ResourceSet must have a `scheme`. Otherwise, you will  encounter exceptions.
- https://github.com/eclipse-sirius/sirius-components/issues/1064[#1064] [core] Remove the URL utility file and ask for the `httpOrigin` instead. Consumers of Sirius Components which rely on the behavior of the URL utility file should instead maintain their own utility file since it is dependent on our build technology and development process.

=== Dependency update

- [backend] Switch to EMFJson 2.3.2-SNAPSHOT. It contains better management of proxy resolution in case of intermodel references

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/1368[#1368] [diagram] Do not render rectangle view children twice