@@ -129,6 +129,9 @@ enum ArrowStyle {
   OutputArrow
   OutputClosedArrow
   OutputFillClosedArrow
+  Circle
+  FillCircle
+  CrossedCircle
 }
 
 type Ratio {
