@@ -269,6 +269,9 @@ _UI_ArrowStyle_Diamond_literal = Diamond
 _UI_ArrowStyle_FillDiamond_literal = FillDiamond
 _UI_ArrowStyle_InputArrowWithDiamond_literal = InputArrowWithDiamond
 _UI_ArrowStyle_InputArrowWithFillDiamond_literal = InputArrowWithFillDiamond
+_UI_ArrowStyle_Circle_literal = Circle
+_UI_ArrowStyle_FillCircle_literal = FillCircle
+_UI_ArrowStyle_CrossedCircle_literal = CrossedCircle
 _UI_LineStyle_Solid_literal = Solid
 _UI_LineStyle_Dash_literal = Dash
 _UI_LineStyle_Dot_literal = Dot
