@@ -152,6 +152,9 @@
     <eLiterals name="FillDiamond" value="8"/>
     <eLiterals name="InputArrowWithDiamond" value="9"/>
     <eLiterals name="InputArrowWithFillDiamond" value="10"/>
+    <eLiterals name="Circle" value="11" literal="Circle"/>
+    <eLiterals name="FillCircle" value="12" literal="FillCircle"/>
+    <eLiterals name="CrossedCircle" value="13" literal="CrossedCircle"/>
   </eClassifiers>
   <eClassifiers xsi:type="ecore:EEnum" name="LineStyle">
     <eLiterals name="Solid"/>
